# central-server/api_docs.json
@@ -191,14 +191,14 @@
           }
         }
       },
-      "/products": {
+      "/clusters": {
         "get": {
-          "tags": ["products"],
-          "summary": "Gets all Products",
+          "tags": ["clusters"],
+          "summary": "Gets all Clusters",
           "produces": ["application/json"],
           "responses": {
             "201": {
-              "description": "Successfully gets Products"
+              "description": "Successfully gets Clusters"
             },
             "401": {
               "description": "invalid input, object invalid"
@@ -209,23 +209,23 @@
           }
         },
         "post": {
-          "tags": ["products"],
-          "summary": "Add a new product",
+          "tags": ["clusters"],
+          "summary": "Add a new cluster",
           "consumes": ["application/json"],
           "produces": ["application/json"],
           "parameters": [
             {
               "in": "body",
-              "name": "Product params",
+              "name": "Cluster params",
               "required": true,
               "schema": {
-                "$ref": "#/definitions/product"
+                "$ref": "#/definitions/cluster"
               }
             }
           ],
           "responses": {
             "201": {
-              "description": "Successfully signed up a new Product"
+              "description": "Successfully signed up a new Cluster"
             },
             "401": {
               "description": "invalid input, object invalid"
@@ -236,21 +236,21 @@
           }
         }
       },
-      "/products/{product_id}": {
+      "/clusters/{cluster_id}": {
         "get": {
-          "tags": ["products"],
-          "summary": "Gets a single product",
+          "tags": ["clusters"],
+          "summary": "Gets a single cluster",
           "produces": ["application/json"],
           "parameters": [
             {
               "in": "path",
-              "name": "product_id",
+              "name": "cluster_id",
               "required": true
             }
           ],
           "responses": {
             "201": {
-              "description": "Successfully gets a single Product"
+              "description": "Successfully gets a single Cluster"
             },
             "401": {
               "description": "invalid input, object invalid"
@@ -264,28 +264,28 @@
           }
         },
         "patch": {
-          "tags": ["products"],
-          "summary": "Updates product info",
+          "tags": ["clusters"],
+          "summary": "Updates cluster info",
           "consumes": ["application/json"],
           "produces": ["application/json"],
           "parameters": [
             {
               "in": "path",
-              "name": "product_id",
+              "name": "cluster_id",
               "required": true
             },
             {
               "in": "body",
-              "name": "Product params",
+              "name": "Cluster params",
               "required": false,
               "schema": {
-                "$ref": "#/definitions/product"
+                "$ref": "#/definitions/cluster"
               }
             }
           ],
           "responses": {
             "201": {
-              "description": "Successfully updates existing Product"
+              "description": "Successfully updates existing Cluster"
             },
             "401": {
               "description": "invalid input, object invalid"
@@ -346,25 +346,29 @@
           }
         }
       },
-      "product": {
+      "cluster": {
         "type": "object",
-        "required": ["name", "quantity", "price"],
+        "required": ["name", "cluster_id", "port","ip_address"],
         "properties": {
           "name": {
             "type": "string",
-            "example": "test product"
+            "example": "test cluster"
           },
-          "size": {
-            "type": "integer",
-            "example": 10
+          "cluster_id": {
+            "type": "string",
+            "example": "12342133231"
           },
-          "quantity": {
+          "port": {
             "type": "integer",
-            "example": 20
+            "example": 2000
           },
-          "price": {
-            "type": "integer",
-            "example": 1000
+          "ip_address": {
+            "type": "string",
+            "example": "192.35.324.1"
+          },
+          "chosen_cluster": {
+            "type": "string",
+            "example": "1133245234"
           }
         }
       }
