# central-server/app/controllers/__init__.py
@@ -1,3 +1,3 @@
 from .index import IndexView
 from .user import (UserView, UserDetailView, UserLoginView, ResetPassword)
-from .product import (ProductView, ProductDetailView)
+from .cluster import (ClusterView, ClusterDetailView)
