# central-server/app/schemas/__init__.py
@@ -1,2 +1,2 @@
 from .user import UserSchema, UserLoginSchema
-from .product import ProductSchema
+from .cluster import ClusterSchema
